# TTtranscriber

./: .env  alembic.ini  app_module.py  db_test.py  init_db.py  lite star posgress.txt  main.py  pyproject.toml  requirements.txt
app/: database.py  models.py  schemas.py
app/crud/: audio.py
app/templates/: index.html
app/web/: routes.py
app/web/templates/: index.html
migrations/: env.py
migrations/versions/: e91d93104480_init.py
tests/: msgspec_productivity.py
